--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,10 @@
       method="post"
       onsubmit="onSubmit()"
     >
-      <fieldset>
+      <fieldset class="fieldset">
         <legend>Personal information</legend>
-        <label for="surname"
-          >Surname:
+        <label for="surname" class="label">
+          Surname:
           <input
             type="text"
             name="surname"
@@ -29,8 +29,8 @@
             autocomplete="off"
           >
         </label>
-        <label for="name"
-          >Name:
+        <label for="name" class="label">
+          Name:
           <input
             type="text"
             name="name"
@@ -39,23 +39,24 @@
             autocomplete="off"
           >
         </label>
-        <label for="age"
-          >How old are You?
+        <label for="age" class="label">
+          How old are You?
           <input type="number" value="12" name="age" id="age">
         </label>
-        <label for="date"
-          >Full date of birth: <input type="date" name="date" id="date">
+        <label for="date" class="label">
+          Full date of birth:
+          <input type="date" name="date" id="date">
         </label>
-        <label for="agree">
+        <label for="agree" class="label">
           I accept the term of the agreement
           <input type="checkbox" id="agree" name="agree" required>
         </label>
       </fieldset>
 
-      <fieldset>
+      <fieldset class="fieldset">
         <legend>Registration</legend>
-        <label for="email"
-          >E-mail:
+        <label for="email" class="label">
+          E-mail:
           <input
             type="email"
             name="email"
@@ -65,8 +66,8 @@
             required
           >
         </label>
-        <label for="password"
-          >Password:
+        <label for="password" class="label">
+          Password:
           <input
             type="password"
             name="password"
@@ -77,24 +78,25 @@
           >
         </label>
       </fieldset>
-      <fieldset>
+
+      <fieldset class="fieldset">
         <legend>An interesting fact about you!</legend>
         Do you love cats?
-        <label class="lovecats" for="yes">
+        <label class="label inline-block" for="yes">
           <input type="radio" name="lovecats" id="yes" >Yes
         </label>
-        <label class="lovecats" for="no"
-          ><input type="radio" name="lovecats" id="no">No
+        <label class="label inline-block" for="no">
+          <input type="radio" name="lovecats" id="no">No
         </label>
-        <label for="color">
+        <label for="color" class="label">
           What is your favorite color?
           <input type="color" id="color">
         </label>
-        <label for="time">
+        <label for="time" class="label">
           What time do you go to bed?
           <input type="time" id="time" name="time" step="1">
         </label>
-        <label for="car">
+        <label for="car" class="label">
           What are your favorite brand of cars?
           <select name="car" id="car" multiple>
             <option value="bmw">BMW</option>
@@ -102,7 +104,7 @@
             <option value="lada">Lada</option>
           </select>
         </label>
-        <label for="rate">
+        <label for="rate" class="label">
           How do you rate our work?
           <input
             type="range"
@@ -114,13 +116,14 @@
           >
         </label>
       </fieldset>
-      <fieldset>
+
+      <fieldset class="fieldset">
         <legend>Additional info:</legend>
-        <label for="comments"
-          >Comments:
+        <label for="comments" class="label">
+          Comments:
           <textarea name="comments" id="comments" cols="20" rows="2"></textarea>
         </label>
-        <label for="recom">
+        <label for="recom" class="label">
           Would you recommend us?
           <select name="recommend" id="recom">
             <option value="yes" selected>Yes</option>
@@ -128,7 +131,9 @@
           </select>
         </label>
       </fieldset>
+
       <input type="submit" value="Submit">
+
     </form>
     <script type="text/javascript" src="./main.js"></script>
   </body>
